# smart-progress-simple

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
smart_progress_simple/: __init__.py  core.py
tests/: test_smart_progress_simple.py
